WIP: Fixing layout issue

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -46,7 +46,7 @@
   flex-direction: column;
   align-items: center;
   padding: 20px;
-  max-width: 1600px;
+  /* max-width: 1600px; */
   width: 100%;
   margin: 20px auto;
   gap: 20px;
